named arguments
of Marpa::R2::Scanless::G named arguments
have been
removed in Marpa::R3.

=head2 Marpa::R3::Scanless::G accessors completely different

The grammar accessors changed between Marpa::R2
and Marpa::R3.
The changes are so massive that
any summary of the changes
to the SLG accessors
would be essentially be a repetition of
L<their
documentation|Marpa::R3::Scanless::G/"Accessors">.

=head2 Marpa::R2::Scanless::R methods renamed in Marpa::R3

For historical reasons,
the methods dealing with input and G1 parse location in Marpa::R2
often had unhelpful or misleading names.
In Marpa::R3 an attempt is being made to name
methods dealing with G1 and input parse location consistently,
and to ensure that the
G1 variants
have C<g1> somewhere in their name.
Accordingly,
C<< $slr->substring() >> has been renamed
C<< $slr->g1_literal() >>.

=head2 Marpa::R2::Scanless::R methods removed in Marpa::R3

The
C<Marpa::R2::Scanless::R::event()> method,
C<Marpa::R2::Scanless::R::last_completed_range()> method,
C<Marpa::R2::Scanless::R::pause_lexeme()> method,
and the
C<Marpa::R2::Scanless::R::range_to_string()> method,
discouraged in Marpa::R2,
have been eliminated in Marpa::R3.

The C<Marpa::R2::Scanless::R::ambiguity_metric()> method
has been removed.
Its purpose is now served by the 
C<Marpa::R2::Scanless::V::ambiguity_level()> method.

The C<Marpa::R2::Scanless::R::ambiguous()> method
has been removed.
Its purpose is now served by the 
C<Marpa::R2::Scanless::V::ambiguous()> method.

The C<Marpa::R2::Scanless::R::current_g1_location()> method
has been removed.
Its purpose is now served by the 
C<Marpa::R2::Scanless::V::block_progress()> method.

The C<Marpa::R2::Scanless::R::pause_span()> method
has been removed.
Event location information is now available
as arguments to the
event handlers.

=head2 Marpa::R2::Scanless::R::line_column() changed

The interface to
C<Marpa::R2::Scanless::R::line_column()> has changed
to allow multi-block input.
